--- a/seminar-lit.bib
+++ b/seminar-lit.bib
@@ -3,7 +3,7 @@
 @Electronic{sp800-145,
   author       = {Peter Mell and Timothy Grance},
   year         = {2011},
-  note         = {[Access 2020-01-05]},
+  note         = {[Access 2020-05-10]},
   title        = {The NIST Definition of Cloud Computing},
   url          = {https://doi.org/10.6028/NIST.SP.800-145},
 }
@@ -11,7 +11,7 @@
 @Electronic{sp800-190,
   author       = {Murugiah Souppaya and John Morello and Karen Scarfone},
   year         = {2017},
-  note         = {[Access 2020-01-05]},
+  note         = {[Access 2020-05-10]},
   title        = {Application Container Security Guide},
   url          = {https://doi.org/10.6028/NIST.SP.800-190},
 }
@@ -19,258 +19,129 @@
 @Electronic{hardeningGuide,
   author       = {{Rancher Labs}},
   year         = {2019},
-  note         = {[Access 2020-01-05]},
+  note         = {[Access 2020-05-10]},
   title        = {Hardening Guide - Rancher v2.3.x},
   url          = {https://rancher.com/docs/rancher/v2.x/en/security/hardening-2.3/},
-}
-
-@Electronic{firestarter451,
-  author       = {{Rancher Labs}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Rancher Labs Recognized by 451 Research as a ‘451 Firestarter’},
-  url          = {https://rancher.com/press/2019-09-26-451-research-firestarter-press-release/},
 }
 
 @Electronic{terraformProvider,
   author       = {{Rancher Labs}},
   year         = {2019},
-  note         = {[Access 2020-01-05]},
+  note         = {[Access 2020-05-10]},
   title        = {Introducing the Rancher 2 Terraform Provider},
   url          = {https://rancher.com/blog/2019/rancher-2-terraform-provider/},
 }
 
-@Electronic{gartnerGlossary,
-  author       = {Gartner},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Gartner Glossary - Cloud Computing},
-  url          = {https://www.gartner.com/en/information-technology/glossary/cloud-computing},
-}
-
-@Electronic{gartnerForecast,
-  author       = {Gartner},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Gartner Forecasts Worldwide Public Cloud Revenue to Grow 17.5 Percent in 2019},
-  url          = {https://www.gartner.com/en/newsroom/press-releases/2019-04-02-gartner-forecasts-worldwide-public-cloud-revenue-to-g},
-}
-
-@Electronic{gartnerCloudStatement,
-  author       = {Gartner},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Cloud computing is the new norm},
-  url          = {https://www.gartner.com/en/information-technology/insights/cloud-strategy},
-}
-
-@Electronic{mirantisDocker,
-  author       = {Mirantis},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {What We Announced Today and Why it Matters},
-  url          = {https://www.mirantis.com/blog/mirantis-acquires-docker-enterprise-platform-business/},
-}
-
-@Electronic{googleAnthos,
-  author       = {Google},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Anthos - Bringing the cloud to you},
-  url          = {https://cloud.google.com/anthos/},
-}
-
-@Electronic{AzureArc,
-  author       = {Microsoft},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Bring Azure services and management to any infrastructure},
-  url          = {https://azure.microsoft.com/en-us/services/azure-arc/},
+@Electronic{changeLog,
+  author       = {{Rancher Labs}},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Rancher 2 Terraform Provider 1.8.3},
+  url          = {https://github.com/terraform-providers/terraform-provider-rancher2/blob/master/CHANGELOG.md},
 }
 
 @Electronic{kubernetes,
   author       = {{The Linux Foundation}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
   title        = {Production-Grade Container Orchestration},
   url          = {https://kubernetes.io/},
 }
 
 @Electronic{podSecurity,
   author       = {{The Linux Foundation}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
   title        = {Pod Security Policies},
   url          = {https://kubernetes.io/docs/concepts/policy/pod-security-policy/},
 }
 
 @Electronic{netSecurity,
   author       = {{The Linux Foundation}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
   title        = {Network Policies},
   url          = {https://kubernetes.io/docs/concepts/services-networking/network-policies/},
 }
 
-@Electronic{kubectl,
-  author       = {{The Linux Foundation}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Overview of kubectl},
-  url          = {https://kubernetes.io/docs/reference/kubectl/overview/},
-}
-
 @Electronic{rancher,
   author       = {{Rancher Labs}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
   title        = {Run Kubernetes Everywhere},
   url          = {https://rancher.com/},
 }
 
-@Electronic{rancherCLI,
-  author       = {{Rancher Labs}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Using the Rancher Command Line Interface},
-  url          = {https://rancher.com/docs/rancher/v2.x/en/cli/},
-}
-
-@Electronic{helm,
-  author       = {CNCF},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Helm 3: The package manager for Kubernetes},
-  url          = {https://helm.sh/},
-}
-
-@Electronic{elastic,
-  author       = {{Elasticsearch B.V.}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Elasticsearch - The heart of the Elastic Stack},
-  url          = {https://www.elastic.co/products/elasticsearch},
-}
-
-@Electronic{prometheus,
-  author       = {{The Linux Foundation}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Prometheus - From metrics to insight},
-  url          = {https://prometheus.io/},
-}
-
-@Electronic{grafana,
-  author       = {{Grafana Labs}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {The open observability platform},
-  url          = {https://grafana.com/},
-}
-
-@Electronic{docker,
-  author       = {Docker},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Enterprise Container Platform},
-  url          = {https://www.docker.com/},
-}
-
 @Electronic{terraform,
   author       = {HashiCorp},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
   title        = {Deliver infrastructure as code with Terraform},
   url          = {https://www.terraform.io/},
 }
 
-@Electronic{12factor,
-  author       = {Adam Wiggins},
-  year         = {2017},
-  note         = {[Access 2020-01-05]},
-  title        = {The Twelve Factor-App},
-  url          = {https://12factor.net/},
+@Electronic{howMany,
+  author       = {Daniel Weibel},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Architecting Kubernetes clusters — how many should you have?},
+  url          = {https://learnk8s.io/how-many-clusters},
 }
 
-@Electronic{istio,
-  author       = {{Istio Authors}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Istio - Connect, secure, control, and observe services},
-  url          = {https://istio.io/},
+@Electronic{threatMatrix,
+  author       = {Yossi Weizman},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Architecting Kubernetes clusters — how many should you have?},
+  url          = {https://www.microsoft.com/security/blog/2020/04/02/attack-matrix-kubernetes/},
 }
 
-@Electronic{eksFargate,
-  author       = {AWS},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Run Serverless Kubernetes Pods Using Amazon EKS},
-  url          = {https://aws.amazon.com/about-aws/whats-new/2019/12/run-serverless-kubernetes-pods-using-amazon-eks-and-aws-fargate/},
+@Electronic{deployAzure,
+  author       = {Christian Frank},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Deploy Kubernetes Clusters on Microsoft Azure with Rancher},
+  url          = {https://rancher.com/blog/2020/build-kubernetes-clusters-on-azure},
 }
 
-@Electronic{awsOutposts,
-  author       = {AWS},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {AWS Outposts},
-  url          = {https://aws.amazon.com/outposts/},
+@Electronic{pronouns,
+  author       = {Abigail Saguy and Juliet Williams},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Deploy Kubernetes Clusters on Microsoft Azure with Rancher},
+  url          = {https://blogs.scientificamerican.com/voices/why-we-should-all-use-they-them-pronouns/},
 }
 
-@Electronic{airForce,
-  author       = {Nicolas Chaillan and Tom Krazit},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {How the U.S. Air Force Deployed Kubernetes and Istio on an F-16 in 45 days},
-  url          = {https://thenewstack.io/how-the-u-s-air-force-deployed-kubernetes-and-istio-on-an-f-16-in-45-days/},
+@Electronic{examplePsp,
+  author       = {Jason Price},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Kubernetes - Pod Security Policies},
+  url          = {https://developer.squareup.com/blog/kubernetes-pod-security-policies/},
 }
 
-@Electronic{softwareEats,
-  author       = {Marc Andreessen},
-  year         = {2011},
-  note         = {[Access 2020-01-05]},
-  title        = {Why Software Is Eating the World},
-  url          = {https://a16z.com/2011/08/20/why-software-is-eating-the-world/},
+@Electronic{falcoPsp,
+  author       = {Pawan Shankar},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Runtime Security in Rancher with Falco},
+  url          = {https://rancher.com/blog/2020/runtime-security-with-falco},
 }
 
-@Electronic{devOps,
-  author       = {Stephen Orban},
-  year         = {2015},
-  note         = {[Access 2020-01-05]},
-  title        = {Enterprise DevOps: Why You Should Run What You Build},
-  url          = {https://aws.amazon.com/blogs/enterprise-strategy/enterprise-devops-why-you-should-run-what-you-build/},
+@Electronic{detailPsp,
+  author       = {Alvaro Iradier},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Enhancing Kubernetes Security with Pod Security Policies},
+  url          = {https://rancher.com/blog/2020/pod-security-policies-part-2},
 }
 
-@Electronic{kubeFed,
-  author       = {sig-multicluster},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Kubernetes Cluster Federation},
-  url          = {https://github.com/kubernetes-sigs/kubefed},
-}
-
-@Electronic{csaMF,
-  author       = {{Micro Focus}},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Cloud Service Automation - Cloud Management Platform},
-  url          = {https://www.microfocus.com/en-us/products/cloud-service-automation/overview},
-}
-
-@Electronic{jenkinsK8s,
-  author       = {Jenkins},
-  year         = {2019},
-  note         = {[Access 2020-01-05]},
-  title        = {Kubernetes plugin for Jenkins},
-  url          = {https://github.com/jenkinsci/kubernetes-plugin},
-}
-
-@book{rbac,
-  author    = {David Ferraiolo and Richard Kuhn and Ramaswamy Chandramouli}, 
-  title     = {Role-Based Access Control},
-  publisher = {Artech Print on Demand},
-  year      = 2007,
-  edition   = 2,
-  isbn      = {978-1596931138}
+@Electronic{technicalArchitecture,
+  author       = {{Rancher Labs}},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Rancher 2.4 Technical Architecture},
+  url          = {https://info.rancher.com/rancher2-technical-architecture},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
