--- a/glossary.tex
+++ b/glossary.tex
@@ -4,8 +4,8 @@
 \makenomenclature
 \renewcommand{\nomname}{List of Abbreviations}
 
-\nomenclature{\textbf{AWS}}{Amazon Web Services}
 \nomenclature{\textbf{CI/CD}}{Continuous Integration / Continuous Deployment}
+\nomenclature{\textbf{CIS}}{Center for Internet Security}
 \nomenclature{\textbf{CLI}}{Command-Line Interface}
 \nomenclature{\textbf{CNCF}}{Cloud Native Computing Foundation}
 \nomenclature{\textbf{IaaS}}{Infrastructure as a Service}
@@ -15,8 +15,8 @@
 \nomenclature{\textbf{K8s}}{Kubernetes}
 \nomenclature{\textbf{NIST}}{National Institute of Standards and Technology}
 \nomenclature{\textbf{PaaS}}{Platform as a Service}
+\nomenclature{\textbf{PSP}}{Pod Security Policy}
 \nomenclature{\textbf{RBAC}}{Role-Based Access Control}
 \nomenclature{\textbf{REST}}{Representational State Transfer}
-\nomenclature{\textbf{S3}}{Simple Storage Service (Amazon)}
 \nomenclature{\textbf{SaaS}}{Software as a Service}
 \nomenclature{\textbf{YAML}}{YAML Ain't Markup Language}
