--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -7,11 +7,16 @@
 
 \onehalfspacing
 
+\subsection{General}
+
+Text.\footnote{See \textit{Saguy, A. (2020)}: Why We Should All Use They/Them Pronouns. \cite{pronouns}}
+
 \subsection{Governance}
 
-Text
+Text.
 
 \subsection{Security}
 
 Text.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
 
+Text.\footnote{See \textit{Mell, P. (2011)}: The NIST Definition of Cloud Computing. \cite{sp800-145}}
