--- a/kapitel3.tex
+++ b/kapitel3.tex
@@ -13,17 +13,17 @@ All major cloud providers have their infrastructure scripting tools, but there's
 
 As of Rancher 2.3, Rancher now has a Terraform provider, and cluster creation and decommissioning can easily be performed from a Terraform plan as part of a move of IT to IaC.\footnote{See \textit{Rancher Labs (2019)}: Introducing the Rancher 2 Terraform Provider. \cite{terraformProvider}}
 
-Text
+Text.\footnote{See \textit{Frank, C. (2020)}: Deploy Kubernetes Clusters on Microsoft Azure with Rancher. \cite{deployAzure}}
 
 \subsection{Cluster templates}
 
-Text
+Text.
 
 Kubernetes provides two types of security policies, one for pod security and one for network security. Pod security policies, as the name implies, govern security-relevant aspects of pod specification,\footnote{See \textit{The Linux Foundation (2019)}: Pod Security Policies. \cite{podSecurity}} whereas network policies govern the allowed communication between groups of pods and the outside world.\footnote{See \textit{The Linux Foundation (2019)}: Network Policies. \cite{netSecurity}}
 
 \subsection{Cloud Credentials}
 
-Text 
+Text.
 
 \begin{figure}[H]
 \centering
@@ -34,7 +34,7 @@ Text
 
 \subsection{Node Templates}
 
-Text 
+Text. 
 
 \begin{figure}[H]
 \centering
@@ -45,7 +45,7 @@ Text
 
 \subsection{Cluster Templates}
 
-Text 
+Text. 
 
 \begin{figure}[H]
 \centering
@@ -56,7 +56,7 @@ Text
 
 \subsection{Kubernetes Cluster}
 
-Text 
+Text. 
 
 \begin{figure}[H]
 \centering
