--- a/kapitel4.tex
+++ b/kapitel4.tex
@@ -7,9 +7,13 @@
 
 \onehalfspacing
 
+\subsection{Rancher hardening}
+
+Text.\footnote{See \textit{Rancher Labs (2019)}: Hardening Guide. \cite{hardeningGuide}}
+
 \subsection{CIS Scan GUI}
 
-Text 
+Text. 
 
 \begin{figure}[H]
 \centering
@@ -20,7 +24,7 @@ Text
 
 \subsection{CIS Scan Hardened}
 
-Text 
+Text. 
 
 \begin{figure}[H]
 \centering
@@ -31,4 +35,10 @@ Text
 
 \subsection{Remediation}
 
-Text
+Text.\footnote{See \textit{Rancher Labs (2020)}: Changelog. \cite{ChangeLog}}
+
+Text.\footnote{See \textit{Price, J. (2020)}: Kubernetes - Pod Security Policies. \cite{examplePsp}}
+
+Text.\footnote{See \textit{Iradier, A. (2020)}: Enhancing Kubernetes Security with Pod Security Policies. \cite{detailPsp}}
+
+Text.\footnote{See \textit{Shankar, P. (2020)}: Runtime Security in Rancher with Falco. \cite{falcoPsp}}
