--- a/seminar-lit.bib
+++ b/seminar-lit.bib
@@ -84,7 +84,7 @@
   author       = {Daniel Weibel},
   year         = {2020},
   note         = {[Access 2020-05-10]},
-  title        = {Architecting Kubernetes clusters — how many should you have?},
+  title        = {Architecting Kubernetes clusters - how many should you have?},
   url          = {https://learnk8s.io/how-many-clusters},
 }
 
@@ -92,7 +92,7 @@
   author       = {Yossi Weizman},
   year         = {2020},
   note         = {[Access 2020-05-10]},
-  title        = {Architecting Kubernetes clusters — how many should you have?},
+  title        = {Threat matrix for Kubernetes},
   url          = {https://www.microsoft.com/security/blog/2020/04/02/attack-matrix-kubernetes/},
 }
 
@@ -108,7 +108,7 @@
   author       = {Abigail Saguy and Juliet Williams},
   year         = {2020},
   note         = {[Access 2020-05-10]},
-  title        = {Deploy Kubernetes Clusters on Microsoft Azure with Rancher},
+  title        = {Why We Should All Use They/Them Pronouns},
   url          = {https://blogs.scientificamerican.com/voices/why-we-should-all-use-they-them-pronouns/},
 }
 
