--- a/seminar.tex
+++ b/seminar.tex
@@ -58,7 +58,7 @@
 
 \begin{abstract}
 In this paper, we'll first have a look at Infrastructure-as-Code frameworks. After introducing the most popular tool, Terraform, we'll look at challenges for Enterprises to manage security and for container environments.
-For a possible solution, we'll look at combining Terraform with Cluster Templates provided in Rancher from Rancher Inc. and the integration with CIS benchmarks.
+For a possible solution, we'll look at combining Terraform with Cluster Templates provided in Rancher (Rancher Labs) and the integration with CIS benchmarks.
 
 \end{abstract}
 
