--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -7,9 +7,9 @@
 
 \onehalfspacing
 
-\subsection{General}
+\subsection{Pronouns}
 
-Text.\footnote{See \textit{Saguy, A. (2020)}: Why We Should All Use They/Them Pronouns. \cite{pronouns}}
+As we're moving towards a more gender-fluid society, it's time to re-think the usage of gendered pronouns in scientific texts. Two well-known professors from UCLA, Abigail C. Saguy and Juliet A. Williams, argue that it makes a lot of sense to use singular they/them instead: "The universal singular they is inclusive of people who identify as male, female or nonbinary"\footnote{\textit{Saguy, A. (2020)}: Why We Should All Use They/Them Pronouns. \cite{pronouns}} Throughout this text, I'll attempt to follow that suggestion and invite my readers to do the same for their own papers, and support gender inclusivity through gender neutral language. Thank you!
 
 \subsection{Governance}
 
