--- a/glossary.tex
+++ b/glossary.tex
@@ -8,8 +8,11 @@
 \nomenclature{\textbf{CIS}}{Center for Internet Security}
 \nomenclature{\textbf{CLI}}{Command-Line Interface}
 \nomenclature{\textbf{CNCF}}{Cloud Native Computing Foundation}
+\nomenclature{\textbf{GRC}}{Governance, risk and compliance}
 \nomenclature{\textbf{IaaS}}{Infrastructure as a Service}
 \nomenclature{\textbf{IaC}}{Infrastructure as Code}
+\nomenclature{\textbf{IEC}}{International Electrotechnical Commission}
+\nomenclature{\textbf{ISO}}{International Organization for Standardization}
 \nomenclature{\textbf{IT}}{Information Technology}
 \nomenclature{\textbf{K3s}}{Kubernetes on the edge}
 \nomenclature{\textbf{K8s}}{Kubernetes}
@@ -19,4 +22,5 @@
 \nomenclature{\textbf{RBAC}}{Role-Based Access Control}
 \nomenclature{\textbf{REST}}{Representational State Transfer}
 \nomenclature{\textbf{SaaS}}{Software as a Service}
+\nomenclature{\textbf{SOX}}{Sarbanes–Oxley Act}
 \nomenclature{\textbf{YAML}}{YAML Ain't Markup Language}
