Updates from Overleaf

--- a/glossary.tex
+++ b/glossary.tex
@@ -4,6 +4,7 @@
 \makenomenclature
 \renewcommand{\nomname}{List of Abbreviations}
 
+\nomenclature{\textbf{ARM}}{Azure Resource Manager}
 \nomenclature{\textbf{CI/CD}}{Continuous Integration / Continuous Deployment}
 \nomenclature{\textbf{CIS}}{Center for Internet Security}
 \nomenclature{\textbf{CLI}}{Command-Line Interface}
