--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -27,6 +27,6 @@ The National Institute of Standards and Technology (NIST) defines cloud computin
 
 In the early days of cloud computing, virtualization played a key role and drove adoption; a couple of years ago the focus shifted away from virtualization towards containerization. All major Hyperscalers now have container run-time offerings, managed and unmanaged, based on the Kubernetes orchestration framework.
 
-Container run-time environments have their own important security aspects, as outlined by NIST.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
+Container run-time environments have their own important security aspects, as outlined by NIST in their container security guide.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
 
 For the purpose of this document, we'll concentrate on the aspects of security and governance (regulatory compliance) in container run-time environments.
