--- a/kapitel5.tex
+++ b/kapitel5.tex
@@ -7,4 +7,13 @@
 
 \onehalfspacing
 
-Conclusion
+Infrastructure-as-Code is a good tool to enforce regulatory compliance and security hardening uniformly across all deployed Kubernetes clusters.
+
+We were able to show that the combination of Terraform together with Rancher templates provide an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle.
+
+Rancher and Terraform are the only open-source, provider-independent
+solution and thus the recommended choice.
+
+There are, however, platform-native solutions for the major hyperscale platforms, for example ARM templates on Microsoft Azure. Also, new developments in the area of serverless computing threaten compute infrastructure as a distinct category itself.
+
+Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprist IT.
