Chapter two update

--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -29,4 +29,6 @@ In the early days of cloud computing, virtualization played a key role and drove
 
 Container run-time environments have their own important security aspects, as outlined by NIST in their container security guide.\footnote{See \textit{Souppaya, M. (2017)}: Application Container Security Guide. \cite{sp800-190}}
 
-For the purpose of this document, we'll concentrate on the aspects of security and governance (regulatory compliance) in container run-time environments.
+For the purpose of this document, we'll concentrate on the aspects of security and governance (regulatory compliance) in container run-time environments, focusing on Kubernetes as it is the dominant choice at the time of writing.
+
+Furthermore, we'll concentrate on the run-time layer itself and not cover hardening aspects of the underlying compute infrastructure. Not that this is not an important topic in itself, it would just exceed the scope of this paper.
