--- a/kapitel5.tex
+++ b/kapitel5.tex
@@ -11,9 +11,11 @@ Infrastructure-as-Code is a good tool to enforce regulatory compliance and secur
 
 We were able to show that the combination of Terraform together with Rancher templates provide an ideal solution for Enterprise IT to provision a secure and compliant container run-time environment and manage the infrastructure life cycle.
 
-Rancher and Terraform are the only open-source, provider-independent
-solution and thus the recommended choice.
+There are alternatives. Platform-native solutions for the major hyperscale platforms do exist, for example ARM templates on Microsoft Azure. Also, the leading on-premise virtualization platforms, VMware and Hyper-V, each have a native orchestration solution.
 
-There are, however, platform-native solutions for the major hyperscale platforms, for example ARM templates on Microsoft Azure. Also, new developments in the area of serverless computing threaten compute infrastructure as a distinct category itself.
+Rancher and Terraform, however, are an open-source and provider-independent
+option and thus the recommended choice.
 
-Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprist IT.
+New developments in the area of serverless computing threaten compute infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools.
+
+Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprise IT.
