--- a/seminar.tex
+++ b/seminar.tex
@@ -57,7 +57,7 @@
 \pagenumbering{Roman}
 
 \begin{abstract}
-In this paper, we'll first have a look at Infrastructure-as-Code frameworks. After introducing the most popular tool, Terraform, we'll look at challenges for Enterprises to manage security and for container environments.
+In this paper, we'll first have a look at Infrastructure-as-Code frameworks. After introducing the most popular tool, Terraform, we'll look at challenges for Enterprises to manage security for container environments.
 For a possible solution, we'll look at combining Terraform with Cluster Templates provided in Rancher (Rancher Labs) and the integration with CIS benchmarks.
 
 \end{abstract}
