--- a/kapitel5.tex
+++ b/kapitel5.tex
@@ -16,6 +16,8 @@ There are alternatives. Platform-native solutions for the major hyperscale platf
 Rancher and Terraform, however, are an open-source and provider-independent
 option and thus the recommended choice.
 
+There are other open-source tools, such as the very recently released CDK8S by Amazon Web Services, but Rancher and Terraform remain the most comprehensive option.
+
 New developments in the area of serverless computing threaten compute infrastructure as a distinct category itself and might obliterate the need for secure and compliant orchestration tools.
 
 Regardless of future developments, governance, risk management and regulatory compliance will remain a key topic in Enterprise IT.
