--- a/seminar-lit.bib
+++ b/seminar-lit.bib
@@ -144,4 +144,12 @@
   url          = {https://info.rancher.com/rancher2-technical-architecture},
 }
 
+@Electronic{previousPaper,
+  author       = {Christian Frank},
+  year         = {2020},
+  note         = {[Access 2020-05-10]},
+  title        = {Multi-Cluster Management fuer Containerumgebungen},
+  url          = {https://storage.googleapis.com/bucket.chfrank.net/Managing%20multiple%20clusters%20for%20container%20run-time%20environments.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
